--- a/base/ChangeLog
+++ b/base/ChangeLog
@@ -5,6 +5,9 @@
 
 Unreleased changes:
 
+    - Add -w to build.cmd and destroot.cmd if using gnumake
+      (raimue in r71370)
+
     - Add livecheck.ignore_sslcert; setting fetch.ignore_sslcert does no
       longer apply to livecheck. distcheck now respects fetch.ignore_sslcert.
       (#17063, raimue in r70975, r70979, r70982)
