Update ChangeLog for r71380
git-svn-id: https://svn.macports.org/repository/macports/trunk@71381 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/base/ChangeLog
+++ b/base/ChangeLog
@@ -5,6 +5,10 @@
 
 Unreleased changes:
 
+    - Add 'system -W path' which changes to the given directory before
+      executing the command.
+      (raimue in r71380)
+
     - Add -w to build.cmd and destroot.cmd if using gnumake
       (raimue in r71370)
 
