--- a/base/ChangeLog
+++ b/base/ChangeLog
@@ -7,7 +7,7 @@ Unreleased changes:
 
     - Add 'system -W path' which changes to the given directory before
       executing the command.
-      (raimue in r71380)
+      (raimue in r71380, r71389)
 
     - Add -w to build.cmd and destroot.cmd if using gnumake
       (raimue in r71370)
