Add ccache_dir and ccache_size to macports.conf and man page.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71606 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/base/doc/macports.conf.5
+++ b/base/doc/macports.conf.5
@@ -127,6 +127,18 @@ Use ccache (C/C++ compiler cache). Requires that ccache has been installed.
 .br
 .Ic Default:
 no
+.It Va ccache_dir
+Location where ccache stores its files
+.br
+.Ic Default:
+${portdbpath}/build/.ccache
+.It Va ccache_size
+Maximum size ccache may use.
+.br
+Use 'G', 'M', or 'K' suffix for giga-, mega- or kilobytes.
+.br
+.Ic Default:
+2G
 .It Va configuredistcc
 Use distcc (distributed compiler). Requires that distcc has been installed.
 .br
