Update ChangeLog for r71604, r71606
git-svn-id: https://svn.macports.org/repository/macports/trunk@71607 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/base/ChangeLog
+++ b/base/ChangeLog
@@ -5,6 +5,10 @@
 
 Unreleased changes:
 
+    - Add new ccache_dir and ccache_size options, default path is
+      ${portdbpath}/build/.ccache and a size of 2 GB.
+      (raimue in r71604, r71606)
+
     - Add 'system -W path' which changes to the given directory before
       executing the command.
       (raimue in r71380, r71389)
