add a note about what -R does not do
git-svn-id: https://svn.macports.org/repository/macports/trunk@71837 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/base/doc/port.1
+++ b/base/doc/port.1
@@ -241,7 +241,7 @@ quiet mode (suppress messages)
 .It Fl n
 don't upgrade dependencies (affects upgrade and install)
 .It Fl R
-also upgrade dependents (only for upgrading)
+also upgrade dependents (only affects upgrade) - note that this does not upgrade dependents' dependencies
 .It Fl u
 uninstall non-active ports when upgrading and uninstalling
 .It Fl f
