ChangeLog: update for r73227, see #26406
git-svn-id: https://svn.macports.org/repository/macports/trunk@73228 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/base/ChangeLog
+++ b/base/ChangeLog
@@ -5,6 +5,8 @@
 
 Unreleased changes:
 
+    - Add '-n' option to reinplace (#26406, ryandesign in r73227)
+
     - Add new ccache_dir and ccache_size options, default path is
       ${portdbpath}/build/.ccache and a size of 2 GB.
       (raimue in r71604, r71606)
