porthier.7 typo, 'build' -> 'built'
git-svn-id: https://svn.macports.org/repository/macports/trunk@73668 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/base/doc/porthier.7
+++ b/base/doc/porthier.7
@@ -95,7 +95,7 @@ misc. automatically generated system-specific database files
 MacPorts runtime data
 .Bl -tag -width "build/" -compact
 .It Pa build/
-Where ports are build and destrooted
+Where ports are built and destrooted
 .It Pa distfiles/
 Holds the distfiles of the fetched ports
 .It Pa packages/
